Launchpad automatic translations update.

--- a/po/fr.po
+++ b/po/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-09-17 18:49+0000\n"
+"PO-Revision-Date: 2010-09-21 20:32+0000\n"
 "Last-Translator: Ptitphysik <amalpeyre@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2010-09-18 05:30+0000\n"
+"X-Launchpad-Export-Date: 2010-09-22 05:40+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -666,6 +666,22 @@ msgid ""
 "\n"
 "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
+"Dans la description de la tâche (cette fenêtre), si vous commencez une ligne "
+"par &quot;-&quot;, elle sera considérée comme &quot;sous-tâche&quot;, "
+"quelque chose à faire pour accomplir la tâche. Essayer d'écrire &quot;- test "
+"sous-tâche&quot; sur la ligne suivante et appuyez sur Entrée.\n"
+"\n"
+"Vous pouvez aussi utiliser le bouton &quot;Ajouter une sous-tâche&quot;.\n"
+"\n"
+"Les tâches et les sous-tâches peuvent être réorganisées par glisser-déplacer "
+"dans la liste des tâches.\n"
+"\n"
+"Le fait d'avoir des sous-tâches impose certaines conséquences. Ainsi, la "
+"date d'échéance d'une sous-tâche ne peut jamais être après la date "
+"d'échéance de sa tâche parente..\n"
+"\n"
+"Aussi, marquer une tâche parente comme faite, marquera toutes ses sous-"
+"tâches comme telles."
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "Learn how to use tags"
