Launchpad automatic translations update.

--- a/po/fr.po
+++ b/po/fr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-09-21 20:32+0000\n"
-"Last-Translator: Ptitphysik <amalpeyre@gmail.com>\n"
+"PO-Revision-Date: 2010-09-22 11:11+0000\n"
+"Last-Translator: Emilien Klein <emilien+ubuntu@klein.st>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Launchpad-Export-Date: 2010-09-22 05:40+0000\n"
+"X-Launchpad-Export-Date: 2010-09-24 05:19+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -716,6 +716,35 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Une étiquette est un simple mot qui commence avec &quot;@&quot;.\n"
+"\n"
+"Essayez de taper un mot ici en le commençant par @ :\n"
+"\n"
+"Il devient jaune, c'est une étiquette.\n"
+"\n"
+"Les étiquettes sont utiles pour trier vos tâches. Dans le menu Vue, vous "
+"pouvez activer le panneau latéral qui affiche toutes les étiquettes que vous "
+"utilisez. De cette manière, vous pouvez facilement voir les tâches "
+"comportant une étiquette donnée. Il n'y a pas de limite au nombre "
+"d'étiquette qu'une tâche peut comporter.\n"
+"\n"
+"Vous pouvez glisser-déposer une étiquette sur une autre pour créer une "
+"\"sous-étiquettes\". Par exemple, Si vous glissez l'étiquette @à_payer sur "
+"l'étiquette @argent, chaque tâche marquée @à_payer apparaîtra aussi dans la "
+"vue de @argent (mais @argent n'est pas ajouté à la tâche en question).\n"
+"\n"
+"Si vous cliquez droit sur une étiquette dans le panneau latéral, vous "
+"pourrez aussi définir sa couleur. Cela vous permet de mieux visualiser vos "
+"tâches et de rendre votre liste plus attractive, du moins, si vous en avez "
+"envie.\n"
+"\n"
+"Une nouvelle étiquette est seulement ajoutée à la tâche actuellement "
+"ouverte. Il n'y a pas de récursion et l'étiquette n'est pas appliqué aux "
+"sous-tâches. Mais si vous créez une sous-tâche, celle-ci héritera "
+"automatiquement des étiquettes de sa tâche parente par défaut (cela sera "
+"aussi le cas si vous ajoutez une étiquette juste après avoir créé la sous-"
+"tâche). Bien entendu, vous pouvez modifier les étiquettes d'une sous-tâche "
+"quand vous le désirez. Cela ne changera rien à la tâche parente."
 
 #: GTG/core/firstrun_tasks.py:66
 msgid "Learn how to use the Workview"
@@ -741,6 +770,26 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"Si vous cliquez sur le bouton &quot;Vue de travail&quot;, seules les tâches "
+"actionnables seront affichées.\n"
+"\n"
+"Qu'est-ce qu'un tâche actionnable ? C'est une tâche que l'on peut faire "
+"immédiatement, tout de suite.\n"
+"\n"
+"C'est une tâche qui est &quot;faisable&quot;, i.e. l'échéance est déjà "
+"dépassée.\n"
+"\n"
+"C'est une tâche qui n'a pas de sous-tâche ouverte, i.e. vous pouvez faire la "
+"tâche immédiatement.\n"
+"\n"
+"Ainsi, la vue de travail ne vous montrera que les tâches que vous devriez "
+"faire à ce moment.\n"
+"\n"
+"Si vous utilisez des tags, vous pouvez faire un clic droit sur le tag dans "
+"la barre latérale et choisir de cacher la tâche assignée à ce tag "
+"particulier dans la vue de travail. C'est très utile si vous avez un tag "
+"comme &quot;un jour&quot; que vous utilisez pour les tâches que vous "
+"voudriez faire mais qui ne sont pas spécialement urgentes."
 
 #: GTG/core/firstrun_tasks.py:82
 msgid "Learn how to use Plugins"
@@ -755,6 +804,14 @@ msgid ""
 "You can find the Plugin Manager by selecting Edit in the Menu Bar, then "
 "clicking Preferences. You will then see a tab labeled Plugins."
 msgstr ""
+"GTG offre la possibilité d'intégrer des greffons pour étendre ses "
+"fonctionnalités.\n"
+"\n"
+"Par exemple il existe actuellement des greffons pour synchroniser GTG avec "
+"Remember the Milk et Evolution, l'intégrer à Tomboy/Gnote et géolocaliser "
+"les tâches.\n"
+"Vous pouvez trouver le gestionnaire de greffons dans le menu Édition, puis "
+"en cliquant sur Préférences. Vous verrez ainsi un onglet Greffons."
 
 #: GTG/core/firstrun_tasks.py:92
 msgid "Reporting bugs"
@@ -774,6 +831,17 @@ msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"GTG est toujours en version alpha. Nous l'apprécions et l'utilisons tous les "
+"jours mais vous pourrez rencontrer quelques bugs.\n"
+"\n"
+"Veuillez les reportez sur notre page Launchpad :\n"
+"https://bugs.launchpad.net/gtg\n"
+"\n"
+"Nous avons besoin de vous afin d'améliorer ce logiciel. Toute contribution, "
+"toute suggestion est la bienvenue.\n"
+"\n"
+"Si vous rencontrez un problème avec GTG, nous pourrions vous aider à "
+"résoudre celui-ci rapidement."
 
 #: GTG/core/firstrun_tasks.py:106
 msgid "Learn how to use the QuickAdd Entry"
@@ -802,6 +870,28 @@ msgid ""
 "title.\n"
 "If a word begins with @, it is interpreted as a tag."
 msgstr ""
+"La zone de texte d'ajout rapide est le moyen le plus rapide de créer une "
+"nouvelle tâche. Vous pouvez l'afficher ou la cacher dans le menu Vue.\n"
+"Pour ajouter une tâche, il vous suffit juste de taper son titre dans la zone "
+"de texte et d'appuyer sur Entrée. La tâche sera créée et sélectionnée dans "
+"le navigateur de tâches. Si un tag est sélectionné dans le panneau de tag, "
+"ce tag sera associé à la tâche que vous créez.\n"
+"Vous pouvez aussi créer une tâche avec des attributs tels que les tags, la "
+"date d'échéance ou d'ajournement dans la zone de saisie rapide.\n"
+"Pour cela, la syntaxe à utiliser est :\n"
+"\n"
+"tags:tag1,tag2,tag3 : de cette façon vous pouvez appliquer autant de tag que "
+"vous le désirez en les séparant par une virgule\n"
+"\n"
+"due:date ou defer:date : de cette façon vous pouvez appliquer une date "
+"d'échéance ou d'ajournement. date peut-être aux formats aaaa-mm-jj (par "
+"exemple 2009-04-01) ou aaaammjj (20090401) ou mmjj (0401, dans ce cas, "
+"l'année est implicitement celle en cours) ou aujourd'hui ou demain ou le nom "
+"d'un jour (due:lundi signifie que l'échéance est pour lundi prochain)\n"
+"\n"
+"Les attributs ajoutés de cette manière sont appliqués mais n'apparaissent "
+"pas dans le titre.\n"
+"Si un mot commence par @, il sera interprété comme un tag."
 
 #: GTG/core/plugins/__init__.py:32
 msgid "Everything necessary to run this plugin is available."
