Launchpad automatic translations update.

--- a/po/gl.po
+++ b/po/gl.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-05-10 07:55+0000\n"
-"Last-Translator: Miguel Anxo Bouzada <mbouzada@gmail.com>\n"
+"PO-Revision-Date: 2010-10-13 10:54+0000\n"
+"Last-Translator: Jorge Álvarez Vilariño <Unknown>\n"
 "Language-Team: Galego <g11n@mancomun.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-05-20 05:28+0000\n"
+"X-Launchpad-Export-Date: 2010-10-14 04:46+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "Language: gl\n"
 
@@ -591,6 +591,18 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link:"
 msgstr ""
+"Benvido ao Getting Things Gnome!, seu novo xestor de tarefas.\n"
+"\n"
+"En GTG todo é unha tarefa. Dende a construción dunha ponte sobre o Océano "
+"Pacífico ata cambiar unha lámpada ou organizar unha festa. Cando se edita "
+"unha tarefa esta gárdase automaticamente.\n"
+"\n"
+"Unha vez rematada a tarefa, pode premer o botón &quot;Marcar como "
+"rematada.&quot; Se a tarefa deixou de ser importante, prema en "
+"&quot;Rexeitar&quot;.\n"
+"\n"
+"Unha tarefa pode ter varias subtarefas que aparecen como enlaces na "
+"descrición. Prema na ligazón seguinte:"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid ""
@@ -604,6 +616,15 @@ msgid ""
 "need to do the subtask anymore.\n"
 "Other stuff you should read:"
 msgstr ""
+"Despois de ler a subtarefa anterior, márquea como Rematada. Se non quere "
+"facer a tarefa, márquea como rexeitada. As tarefas Rematadas e Rexeitadas "
+"mantéñense no panel de tarefas pechadas, agochado por defecto pero que pode "
+"activar doadamente no menú Ver.\n"
+"\n"
+"Se decide pechar esta tarefa actual, tamén se pecharán automaticamente as "
+"subtarefas. De feito nós consideramos que, ao acadar unha determinada "
+"tarefa, xa non precisa facer a subtarefa.\n"
+"Outras cousas que debería ler:"
 
 #: GTG/core/firstrun_tasks.py:26
 msgid ""
@@ -837,6 +858,28 @@ msgid ""
 "title.\n"
 "If a word begins with @, it is interpreted as a tag."
 msgstr ""
+"A entrada rápida é o xeito máis rápido de crear unha nova tarefa. Pode "
+"amosala ou agochala no menú Ver.\n"
+"Para engadir unha tarefa só precisa escribir o seu título e premer intro. "
+"Crearase a tarefa e seleccionarase no navegador de tarefas. Se se selecciona "
+"unha etiqueta no panel de etiquetas, aplicarase a devandita etiqueta á "
+"tarefa recién creada.\n"
+"Tamén pode crear unha tarefa con atributos como etiquetas, caducidade ou "
+"adiar na entrada rápida.\n"
+"Para iso a sintaxe é:\n"
+"\n"
+"etiquetas:etiqueta1,etiqueta2,etiqueta3. Deste xeito, pode aplicar tantas "
+"etiquetas como queira empregando a coma como separador.\n"
+"\n"
+"caducidade:data de caducidade ou adiar:nova data de inicio. Desta forma, "
+"pode aplicar unha data de caducidade ou adiar a data de inicio. A data pode "
+"ser aaaa-mm-dd (por exemplo 2009-04-01) ou aaaammdd (20090401) ou mmdd "
+"(0401, neste caso, o ano é implicitamente o actual), ou hoxe ou mañá ou un "
+"día da semana (caducidade:luns significa que caduca o vindeiro luns).\n"
+"\n"
+"Os atributos que se engaden deste xeito aplícanse, pero non aparecen no "
+"título.\n"
+"Se unha palabra comeza con @, interprétase como unha etiqueta."
 
 #: GTG/core/plugins/__init__.py:32
 msgid "Everything necessary to run this plugin is available."
