Launchpad automatic translations update.

--- a/po/bg.po
+++ b/po/bg.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-10-11 10:35+0000\n"
+"PO-Revision-Date: 2010-10-28 11:31+0000\n"
 "Last-Translator: Svetoslav Stefanov <svetlisashkov@yahoo.com>\n"
 "Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-10-12 04:54+0000\n"
+"X-Launchpad-Export-Date: 2010-10-29 05:31+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -142,19 +142,19 @@ msgstr[1] "Завършена с %(days)d дни по рано"
 #, python-format
 msgid "Due tomorrow!"
 msgid_plural "%(days)d days left"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "За утре!"
+msgstr[1] "Остават още %(days)d"
 
 #: GTG/taskeditor/editor.py:332
 msgid "Due today!"
-msgstr ""
+msgstr "За днес!"
 
 #: GTG/taskeditor/editor.py:335
 #, python-format
 msgid "Due yesterday!"
 msgid_plural "Was %(days)d days ago"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "За вчера!"
+msgstr[1] "Беше преди %(days)d дни"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "Closed on"
@@ -560,6 +560,9 @@ msgid ""
 "href=\"http://bugs.edge.launchpad.net/gtg\">our Launchpad page</a>. If you "
 "have Apport installed, it will be started for you."
 msgstr ""
+" прекъсна. Моля съобщете за грешката на <a "
+"href=\"http://bugs.edge.launchpad.net/gtg\">нашата страница в Launchpad</a>. "
+"Ако имате инсталирана програмата Apport, тя ще бъде пусната."
 
 #: GTG/core/task.py:53
 msgid "My new task"
@@ -591,6 +594,17 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link:"
 msgstr ""
+"Добре дошли в Getting Things Gnome!, вашият нов организатор.\n"
+"\n"
+"В GTG всичко е задача. От построяването на мост над Тихия океан до смяната "
+"на крушка или организирането на веселба. Промените по задачите се запазват "
+"автоматично.\n"
+"\n"
+"След изпълняване на задачата, натиснете бутона &quot;Изпълнена&quot;. Ако "
+"задачата вече не е актуална, използвайте бутона &quot;Отхвърляне&quot;.\n"
+"\n"
+"Задачите могат да се състоят от подзадачи, които се появяват като връзки в "
+"описанието. Просто изберете следната връзка:"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid ""
@@ -604,6 +618,13 @@ msgid ""
 "need to do the subtask anymore.\n"
 "Other stuff you should read:"
 msgstr ""
+"След като разгледате горната под-задача, маркирайте я като приключена. Ако "
+"задачата е отпаднала, маркирайте я като отхвърлена. Приключените и "
+"отхвърлените задачи се съхраняват в списъка с приключени задачи, който по "
+"подразбиране е скрит, но може да бъде показан от менюто Изглед.\n"
+"\n"
+"При приключване на задача, под-задачите се приключват автоматично.\n"
+"Още за четене:"
 
 #: GTG/core/firstrun_tasks.py:26
 msgid ""
@@ -613,6 +634,11 @@ msgid ""
 "\n"
 "Thank you for trying out GTG :-)"
 msgstr ""
+"Надяваме се да харесате GTG. Изпращайте ни доклади за грешки и идеи за "
+"подобряване на адрес::\n"
+"    https://bugs.launchpad.net/gtg\n"
+"\n"
+"Благодарим ви, че опитахте GTG :-)"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid "Learn how to use subtasks"
@@ -634,6 +660,20 @@ msgid ""
 "\n"
 "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
+"Ако в описанието на задачата (този прозорец) започнете реда с &quot;-&quot;, "
+"то редът ще бъде превърнат в &quot;подзадача&quot;,нещо, което трябва да се "
+"свърши за изпълнението на задачата. Опитайте да напишете &quot;- пробна "
+"подзадача&quot; на следващия ред и натиснете клавиша Enter.\n"
+"\n"
+"Можете да използвате и бутона &quot;Вмъкване на подзадача&quot;.\n"
+"\n"
+"Задачите и подзадачите могат да се разместват чрез влачене в списъка със "
+"задачи.\n"
+"\n"
+"Подзадачите имат някои ограничения: например не може крайният срок на дадена "
+"подзадача да е след крайния срок на задачата.\n"
+"\n"
+"Маркирането на задача като приключена ще приключи и всички подзадачи."
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "Learn how to use tags"
@@ -668,6 +708,29 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Етикетите са прости думи, които започват с &quot;@&quot;.\n"
+"\n"
+"Опитайте да напишете дума започваща с @ тук:\n"
+"\n"
+"Оцветяват се в жълто и са етикети.\n"
+"\n"
+"Етикетите за полезни за пдореждането на задачите. От менюто Изглед можете да "
+"покажете панел с всички използвани етикети за по-лесно намиране на задачите "
+"с даден етикет. Няма ограничение за броя на етикетите в дадена задача.\n"
+"\n"
+"Можете да влачите и пускате даден етикет върху друг за създаване на "
+"\"подетикети\". Например, ако влачите етикета @за_плащане върху @пари, всяка "
+"задача маркирана с @за_плащане ще се появява и в изгледа за @пари (без "
+"етикетът @пари да е добавен към задачата).\n"
+"\n"
+"Ако щракнете с десния бутон на мишката върху даден етикет можете да указата "
+"цвета му. Това ще позволи разкрасяването на списъка със задачи, в случай, че "
+"го предпочитате по-шарен.\n"
+"\n"
+"Етикетите се закачат само към текущата задача, а не и към подзадачите. "
+"Подзадачите наследяват етикетите на родителската задача при създаването, но "
+"след това можете да променяте етикетите на задачата и подзадачите независимо "
+"едни от други."
 
 #: GTG/core/firstrun_tasks.py:66
 msgid "Learn how to use the Workview"
@@ -693,6 +756,25 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"При натискане на бутона &quot;Работен изглед&quot; се показват само "
+"задачите, по които може да се работи.\n"
+"\n"
+"По кои задачи може да се работи? Това са задачите, които могат да бъдат "
+"приключени веднага.\n"
+"\n"
+"Това са задачи, които могат да бъдат започнати, т.е. началната им дата е "
+"вече минала.\n"
+"\n"
+"Това са задачи, които нямат отворени подзадачи.\n"
+"\n"
+"Работният изглед показва само задачите, по които се предполага, че трябва да "
+"работите.\n"
+"\n"
+"Ако използвате етикети можете да щракнете с десния бутон на мишката върху "
+"етикет в панела и да изберете да скриете задачите, маркирани с него от "
+"Работния изглед. Това е особено полезно ако имате етикет подобен на "
+"&quot;някой ден&quot;, който използвате за задачи, които не са особено "
+"спешни."
 
 #: GTG/core/firstrun_tasks.py:82
 msgid "Learn how to use Plugins"
@@ -707,6 +789,14 @@ msgid ""
 "You can find the Plugin Manager by selecting Edit in the Menu Bar, then "
 "clicking Preferences. You will then see a tab labeled Plugins."
 msgstr ""
+"GTG притежава способността да използва приставки за разширяване на основната "
+"си функционалност.\n"
+"\n"
+"Няколко примера за текущи приставки са синхронизиране с Remember the Milk и "
+"Evolution, интеграция с Tomboy/Gnote и геолокализирани задачи.\n"
+"Можете да откриете Мениджъра на приставки изберете Редактиране от лентата с "
+"менюта, след което натиснете Настройки. След това ще видите подпрозорец с "
+"име Приставки."
 
 #: GTG/core/firstrun_tasks.py:92
 msgid "Reporting bugs"
@@ -726,6 +816,17 @@ msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"GTG все още е в много ранна степен на разработка. Ние си го харесваме и го "
+"използваме ежедневно, но вие ще попаднете на някои грешки.\n"
+"\n"
+"Моля, съобщете за тях на нашата страница в Launchpad:\n"
+"https://bugs.launchpad.net/gtg\n"
+"\n"
+"Ние се нуждаем от вас, за да направим този софтуер по-добър. Всеки принос и "
+"идея са добре дошли.\n"
+"\n"
+"Ако имате проблеми с GTG, ние може да успеем много бързо да ви помогнем или "
+"да го решим."
 
 #: GTG/core/firstrun_tasks.py:106
 msgid "Learn how to use the QuickAdd Entry"
@@ -842,11 +943,11 @@ msgstr "<b>Основен</b>"
 
 #: GTG/viewmanager/preferences.glade.h:3
 msgid "<b>Task Browser</b>"
-msgstr ""
+msgstr "<b>Преглед на задачи</b>"
 
 #: GTG/viewmanager/preferences.glade.h:4
 msgid "<b>Task Editor</b>"
-msgstr ""
+msgstr "<b>Редактор на задачи</b>"
 
 #: GTG/viewmanager/preferences.glade.h:5
 msgid "Active _Plugins:"
@@ -874,7 +975,7 @@ msgstr "Приставки"
 
 #: GTG/viewmanager/preferences.glade.h:11
 msgid "Show task text preview"
-msgstr ""
+msgstr "Покажи преглед на текста на задачата"
 
 #: GTG/viewmanager/preferences.glade.h:12
 msgid "Start Getting Things GNOME! on every login"
@@ -886,7 +987,7 @@ msgstr "Хранилище"
 
 #: GTG/viewmanager/preferences.glade.h:14
 msgid "Task _Backends:"
-msgstr ""
+msgstr "_Модули на задачата:"
 
 #: GTG/viewmanager/preferences.glade.h:15
 msgid "_About Plugin"
@@ -1302,9 +1403,6 @@ msgstr "Затваряне след секунда"
 
 #~ msgid "Plugin Manager"
 #~ msgstr "Управление на приставки"
-
-#~ msgid "Welcome to Getting Things Gnome!, your new task manager."
-#~ msgstr "Посрещнете Getting Things Gnome!, вашият нов организатор."
 
 #~ msgid ""
 #~ "In the task description (this window), if you begin a line with &quot;-"
