--- a/po/it.po
+++ b/po/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-04-07 09:51+0000\n"
-"Last-Translator: Milo Casagrande <milo@casagrande.name>\n"
+"PO-Revision-Date: 2010-11-05 01:19+0000\n"
+"Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-04-08 07:19+0000\n"
+"X-Launchpad-Export-Date: 2010-11-05 04:49+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -86,7 +86,7 @@ msgstr "domani"
 
 #: GTG/tools/dates.py:185
 msgid "next week"
-msgstr "la prossima settima"
+msgstr "la prossima settimana"
 
 #: GTG/tools/dates.py:186
 msgid "next month"
@@ -101,22 +101,23 @@ msgid ""
 "We're terribly sorry. Could you help us fix the problem by reporting the "
 "crash?"
 msgstr ""
+"È possibile aiutare a risolvere il problema inviando una segnalazione"
 
 #: GTG/tools/gtkcrashhandler.py:169
 msgid "An error has occurred"
-msgstr ""
+msgstr "Si è verificato un errore"
 
 #: GTG/tools/gtkcrashhandler.py:177
 msgid "It looks like an error has occurred."
-msgstr ""
+msgstr "Sembra che si sia verificato un errore."
 
 #: GTG/tools/gtkcrashhandler.py:212
 msgid "_Details"
-msgstr ""
+msgstr "_Dettagli"
 
 #: GTG/tools/gtkcrashhandler.py:218
 msgid "_Report this problem..."
-msgstr ""
+msgstr "_Segnala un problema..."
 
 #: GTG/tools/gtkcrashhandler.py:222
 msgid "_Ignore the error"
@@ -126,33 +127,33 @@ msgstr ""
 #, python-format
 msgid "Completed %(days)d day late"
 msgid_plural "Completed %(days)d days late"
-msgstr[0] "Completato %(days)d giorno in ritardo"
-msgstr[1] "Completato %(days)d giorni in ritardo"
+msgstr[0] "Completato con %(days)d giorno di ritardo"
+msgstr[1] "Completato con %(days)d giorni di ritardo"
 
 #: GTG/taskeditor/editor.py:324
 #, python-format
 msgid "Completed %(days)d day early"
 msgid_plural "Completed %(days)d days early"
-msgstr[0] "Completato %(days)d giorno in anticipo"
-msgstr[1] "Completato %(days)d giorni in anticipo"
+msgstr[0] "Completato con %(days)d giorno d'anticipo"
+msgstr[1] "Completato con %(days)d giorni d'anticipo"
 
 #: GTG/taskeditor/editor.py:330
 #, python-format
 msgid "Due tomorrow!"
 msgid_plural "%(days)d days left"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Entro domani."
+msgstr[1] "Entro %(days)d giorni"
 
 #: GTG/taskeditor/editor.py:332
 msgid "Due today!"
-msgstr ""
+msgstr "Entro oggi."
 
 #: GTG/taskeditor/editor.py:335
 #, python-format
 msgid "Due yesterday!"
 msgid_plural "Was %(days)d days ago"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Scaduta ieri."
+msgstr[1] "Scaduta %(days)d giorni fa"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "Closed on"
@@ -169,7 +170,7 @@ msgstr "Rimuovi"
 
 #: GTG/taskeditor/taskeditor.glade.h:4
 msgid "Due for"
-msgstr "Da completare il"
+msgstr "Da completare entro il"
 
 #: GTG/taskeditor/taskeditor.glade.h:5
 msgid "Insert subtask"
@@ -197,7 +198,7 @@ msgstr "Tra poco"
 
 #: GTG/taskeditor/taskeditor.glade.h:11
 msgid "Starting on"
-msgstr "Inizia il"
+msgstr "Iniziata il"
 
 #: GTG/taskeditor/taskeditor.glade.h:12
 msgid "Task"
@@ -278,7 +279,7 @@ msgstr "Aggiungi un'attività ausiliaria"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:8
 msgid "Apply to subtasks"
-msgstr "Applica alle attività ausiliari"
+msgstr "Applica alle attività ausiliarie"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:9
 msgid "Cancel"
@@ -328,19 +329,21 @@ msgid ""
 "Getting Things Gnome!; if not, write to the Free Software Foundation, Inc., "
 "51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
 msgstr ""
-"Getting Things GNOME! is free software; you can redistribute it and/or "
-"modify it under the terms of the GNU General Public License as published by "
-"the Free Software Foundation; either version 3 of the License, or (at your "
-"option) any later version.\n"
+"Getting Things Gnome!  è software libero; è possibile ridistribuirlo e/o "
+"modificarlo secondo i termini della licenza GNU General Public License, come "
+"pubblicata dalla Free Software Foundation; versione 3 della licenza, o (a "
+"scelta) una versione più recente.\n"
 "\n"
-"Getting Things GNOME! is distributed in the hope that it will be useful, but "
-"WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY "
-"or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for "
-"more details.\n"
+"Getting Things Gnome!  è distribuito nella speranza che possa risultare "
+"utile, ma SENZA ALCUNA GARANZIA, nemmeno la garanzia implicita di "
+"COMMERCIABILITÀ o APPLICABILITÀ PER UNO SCOPO PARTICOLARE. Per maggiori "
+"dettagli consultare la GNU General Public License.\n"
 "\n"
-"You should have received a copy of the GNU General Public License along with "
-"Getting Things Gnome!; if not, write to the Free Software Foundation, Inc., "
-"51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA."
+"Una copia della GNU General Public License dovrebbe essere stata fornita con "
+"Getting Things Gnome!. In caso contrario scrivere a:\n"
+"  Free Software Foundation, Inc.\n"
+"  51 Franklin Street, Fifth Floor, Boston, MA\n"
+"  02110-1301 USA"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:24
 msgid ""
@@ -396,12 +399,12 @@ msgstr "L'etichetta è visualizzata nella scaletta di lavoro"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:37
 msgid "TagName"
-msgstr "NomeEtichetta"
+msgstr "Nome etichetta"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:38 GTG/taskbrowser/tagtree.py:352
 #: GTG/taskbrowser/tasktree.py:330 GTG/taskbrowser/tasktree.py:482
 msgid "Tags"
-msgstr "Etichetta"
+msgstr "Etichette"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:39
 msgid "Und_ismiss"
@@ -591,6 +594,19 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link:"
 msgstr ""
+"Benvenuti in Getting Things Gnome!, il vostro nuovo gestore di attività.\n"
+"\n"
+"In GTG, ogni cosa è un'attività. Dal costruire un ponte sull'Oceano Pacifico "
+"al cambiare una lampadina oppure organizzare una festa. Quando un'attività "
+"viene modificata, il salvataggio dei cambiamenti è automatico.\n"
+"\n"
+"Quanto un'attività è stata completata, basta pfare clic sul pulsante "
+"&quot;Completata&quot;. Se l'attività non dovrà più essere ripresa in "
+"futuro, premere semplicemente &quot;Rimuovi&quot;.\n"
+"\n"
+"Un'attività può contenere più attività ausiliarie che compaiono nella "
+"descrizione come collegamenti. Fare semplicemente clic sul seguente "
+"collegamento:"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid ""
@@ -604,6 +620,17 @@ msgid ""
 "need to do the subtask anymore.\n"
 "Other stuff you should read:"
 msgstr ""
+"Una volta letta l'attività ausiliaria, segnarla coma Completata. Se non si "
+"vuole completare l'attività, segnarla come rimossa. Le attività completate e "
+"rimosse vengono spostate nel pannello delle attività chiuse, nascosto per "
+"impostazione predefinita ma che può essere facilmente abilitato dal menu "
+"«Visualizza».\n"
+"\n"
+"Se si decide di chiudere un'attività, verranno contestualmente chiuse anche "
+"le attività ausiliarie. Questo scelta è dovuta al fatto che, se si completa "
+"un'attività, è una conseguenza ovvia che anche i compiti ausiliari siano "
+"stati completati.\n"
+"Per altre informazioni leggere:"
 
 #: GTG/core/firstrun_tasks.py:26
 msgid ""
@@ -613,6 +640,11 @@ msgid ""
 "\n"
 "Thank you for trying out GTG :-)"
 msgstr ""
+"Speriamo che apprezzerete GTG. Riportate segnalazioni di bug e idee per "
+"migliorare il programma usango:\n"
+"    https://bugs.launchpad.net/gtg\n"
+"\n"
+"Grazie per aver provati GTG"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid "Learn how to use subtasks"
@@ -634,6 +666,24 @@ msgid ""
 "\n"
 "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
+"Nella descrizione dell'attività (questa finestra), se all'inizio di una riga "
+"si inserisce un &quot;«-»&quot;, questo verrà considerato come "
+"un'&quot;attività ausiliaria&quot;, qualcosa da fare per poter completare "
+"l'attività. Provare a scrivere &quot;- prova&quot; in una nuova riga e "
+"premere invio.\n"
+"\n"
+"È inoltre possibile utilizzare il pulsante &quot;Inserisci attività "
+"ausiliaria&quot;.\n"
+"\n"
+"Le attività e le attività ausiliaria possono essere riorganizzate "
+"trascinandole all'interno dell'elenco.\n"
+"\n"
+"Alcune considerazioni sulle attività ausiliarie: ad esempio, la data di "
+"scadenza di un'attività ausiliaria non potrà mai essere successiva a quella "
+"dell'attività principale.\n"
+"\n"
+"Inoltre, se un'attività viene segnata come completata, lo saranno anche "
+"tutte le relative attività ausiliarie."
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "Learn how to use tags"
@@ -668,6 +718,36 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Un'etichetta è semplicemente una parola che inizia con &quot;@&quot;.\n"
+"\n"
+"Provare a digitare una parola che inizia con «@» qui:\n"
+"\n"
+"Diventerà di colore giallo, questa è un'etichetta.\n"
+"\n"
+"Le etichette sono utili per ordinare le proprie attività. Nel menu "
+"«Visualizza», è possibile abilitare un pannello laterale che mostra tutte le "
+"etichette utilizzate in modo da poter facilmente trovare le attività "
+"contrassegnate con una specifica etichetta. Non c'è un limite al numero di "
+"etichette che possono essere assegnate ad un'attività.\n"
+"\n"
+"È possibile trascinare una etichetta su un'altra per creare «etichette "
+"ausiliarie». Ad esempio, se si trascina l'etichetta @da_pagare "
+"sull'etichetta @soldi, tutte le attività contrassegnate con @da_pagare "
+"appariranno anche nella categoria @soldi (ma l'etichetta @soldi non verrà "
+"aggiunta all'attività).\n"
+"\n"
+"Facendo clic con il tasto destro del mouse su un'etichetta presente nel "
+"pannello laterale è inoltre possibile sceglierne il colore. Questo "
+"consentirà di avere un elenco delle attività molto colorato.\n"
+"\n"
+"Una nuova etichetta viene aggiunta solo all'attività corrente. L'etichetta "
+"non è ricorsiva e non viene applicata alla attività ausiliarie già presenti. "
+"Ma quando si crea una nuova attività ausiliaria, questa erediterà le "
+"etichette dell'attività principale come impostazione predefinita (questo "
+"accadrà anche quando verrà aggiunta un'etichetta all'attività principale "
+"subito dopo la creazione di un'attività ausiliaria). Ovviamente, è possibile "
+"modificare le etichette di una specifica attività ausiliaria in qualsiasi "
+"momento. Questa non verrà mai modificata dall'attività principale."
 
 #: GTG/core/firstrun_tasks.py:66
 msgid "Learn how to use the Workview"
@@ -693,6 +773,27 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"Se si preme il pulsante &quot;Scaletta di lavoro&quot;, verranno mostrate "
+"solo le attività eseguibili.\n"
+"\n"
+"Cos'è un'attività eseguibile? È un'attività che può essere svolta "
+"direttamente, in un preciso momento.\n"
+"\n"
+"È un'attività che è già &quot;avviata&quot;, ad esempio se la data di inizio "
+"è già passata.\n"
+"\n"
+"È un'attività che non ha attività ausiliarie aperte, ad esempio un'attività "
+"che si può svolgere da soli.\n"
+"\n"
+"In questo modo, la scaletta di lavoro mostrerà solo le attività che "
+"dovrebbero essere completate in quel preciso momento.\n"
+"\n"
+"Se si utilizzano le etichette, è possibile selezionarne una facendo clic con "
+"il tasto destro del mouse nel pannello laterale e scegliere di nascondere "
+"nella scaletta di lavoro le attività contrassegnate da questa particolare "
+"etichetta. È molto utile se si hanno etichette come &quot;un_giorno&quot; "
+"che vengono utilizzate per attività che si vorrebbero svolgere ma non hanno "
+"una particolare importanza."
 
 #: GTG/core/firstrun_tasks.py:82
 msgid "Learn how to use Plugins"
@@ -707,6 +808,14 @@ msgid ""
 "You can find the Plugin Manager by selecting Edit in the Menu Bar, then "
 "clicking Preferences. You will then see a tab labeled Plugins."
 msgstr ""
+"GTG offre la possibilità di aggiungere alcuni plugin per estenderne le "
+"funzionalità.\n"
+"\n"
+"Alcuni esempi dei plugin attualmente presenti sono la sincronizzazione con "
+"Remember the Milk e con Evolution, l'integrazione con Tomboy/Gnote e le "
+"attività geolocalizzate.\n"
+"È possibile trovare il gestore dei plugin selezionando Modifica → Preferenze "
+"nella barra dei menù e aprire la scheda Plugin."
 
 #: GTG/core/firstrun_tasks.py:92
 msgid "Reporting bugs"
@@ -804,7 +913,7 @@ msgstr ""
 
 #: GTG/viewmanager/delete_dialog.py:59
 msgid "Are you sure you want to delete this task?"
-msgstr "Eliminare questa attività?"
+msgstr "Eliminare veramente questa attività?"
 
 #: GTG/viewmanager/delete_dialog.py:60
 msgid "Keep selected task"
@@ -812,7 +921,7 @@ msgstr "Mantieni attività selezionata"
 
 #: GTG/viewmanager/delete_dialog.py:61
 msgid "Permanently remove task"
-msgstr "Rimuovi attività"
+msgstr "Rimuovi definitivamente attività"
 
 #: GTG/viewmanager/delete_dialog.py:63
 msgid ""
@@ -823,7 +932,7 @@ msgstr ""
 
 #: GTG/viewmanager/delete_dialog.py:64
 msgid "Are you sure you want to delete these tasks?"
-msgstr "Eliminare queste attività?"
+msgstr "Eliminare veramente queste attività?"
 
 #: GTG/viewmanager/delete_dialog.py:65
 msgid "Keep selected tasks"
@@ -831,7 +940,7 @@ msgstr "Mantieni attività selezionate"
 
 #: GTG/viewmanager/delete_dialog.py:66
 msgid "Permanently remove tasks"
-msgstr "Rimuovi attività"
+msgstr "Rimuovi definitivamente attività"
 
 #: GTG/viewmanager/preferences.glade.h:1
 msgid "<b>Dependencies</b>"
