--- a/po/it.po
+++ b/po/it.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-11-05 01:19+0000\n"
+"PO-Revision-Date: 2010-11-05 10:58+0000\n"
 "Last-Translator: Claudio Arseni <claudio.arseni@gmail.com>\n"
 "Language-Team: Italian <it@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-11-05 04:49+0000\n"
+"X-Launchpad-Export-Date: 2010-11-06 04:54+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -121,7 +121,7 @@ msgstr "_Segnala un problema..."
 
 #: GTG/tools/gtkcrashhandler.py:222
 msgid "_Ignore the error"
-msgstr ""
+msgstr "_Ignora l'errore"
 
 #: GTG/taskeditor/editor.py:321
 #, python-format
@@ -563,6 +563,9 @@ msgid ""
 "href=\"http://bugs.edge.launchpad.net/gtg\">our Launchpad page</a>. If you "
 "have Apport installed, it will be started for you."
 msgstr ""
+" è terminato in modo inatteso. Riportare il bug sulla <a "
+"href=\"http://bugs.edge.launchpad.net/gtg\">pagina Launchpad del "
+"progetto</a>. Se Apport è installato, verrà avviato automaticamente."
 
 #: GTG/core/task.py:53
 msgid "My new task"
@@ -835,6 +838,17 @@ msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"GTG è ancora in fase di sviluppo (alpha). Può essere tranquillamente "
+"utilizzato tutti i giorni, tuttavia è possibile incontrare alcuni bug.\n"
+"\n"
+"È possibile segnalarli sulla pagina Launchpad del progetto:\n"
+"https://bugs.launchpad.net/gtg\n"
+"\n"
+"Questo renderà certamente migliore questo software. Ogni contributo e ogni "
+"idea sono i benvenuti.\n"
+"\n"
+"Se si incontrano problemi con GTG, sarà possibile chiedere supporto e "
+"ricevere aiuto molto velocemente."
 
 #: GTG/core/firstrun_tasks.py:106
 msgid "Learn how to use the QuickAdd Entry"
@@ -863,6 +877,30 @@ msgid ""
 "title.\n"
 "If a word begins with @, it is interpreted as a tag."
 msgstr ""
+"Il modo più semplice di creare una nuova attività è l'inserimento rapido. È "
+"possibile visualizzarlo o nasconderlo utilizzando il menù «Visualizza».\n"
+"Per aggiungere una nuova attività è sufficiente inserirne il titolo nella "
+"casella di testo e premere invio. L'attività verrà creata e selezionata "
+"nella finestra di esplorazione. Se è stata selezionata un'etichetta nel "
+"pannello laterale, questa sarà applicata all'attività creata.\n"
+"È inoltre possibile creare un'attività con attributi come etichette, data di "
+"scadenza o posticiparla nella casella di inserimento rapido.\n"
+"Utilizzare questa sintassi :\n"
+"\n"
+"etichette:etichetta1,etichetta2,etichetta3 : in questo modo è possibile "
+"applicare molte etichette utilizzando la virgola «,» come separatore\n"
+"\n"
+"scadenza:data o data posticipata:data : in questo modo è possibile applicare "
+"una data di scadenza o posticiparle la scadenza dell'attività. La data pù "
+"essere nel formato aaaa-mm-gg (ad esempio 2009-04-01) oppure aaaammgg "
+"(20090401) o ancora mmgg (0401, nel caso in cui l'anno sia implicito per una "
+"determinata attività) oppure è possibile utilizzare oggi o domani o un "
+"giorno della settimana (scadenza:lunedì verrà interpretato come scade lunedì "
+"prossimo)\n"
+"\n"
+"Gli attributi aggiunti con questi metodi saranno applicati ma non "
+"compariranno nel titolo dell'attività.\n"
+"Se una parola inizia con «@», verrà interpretata come un'etichetta."
 
 #: GTG/core/plugins/__init__.py:32
 msgid "Everything necessary to run this plugin is available."
