Launchpad automatic translations update.

--- a/po/de.po
+++ b/po/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-04-11 21:42+0000\n"
-"Last-Translator: Jan-Christoph Borchardt <jan@inquata.com>\n"
+"PO-Revision-Date: 2010-11-09 19:21+0000\n"
+"Last-Translator: cmdrhenner <cmdrhenner@gmail.com>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-04-12 03:54+0000\n"
+"X-Launchpad-Export-Date: 2010-11-10 05:04+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -101,6 +101,8 @@ msgid ""
 "We're terribly sorry. Could you help us fix the problem by reporting the "
 "crash?"
 msgstr ""
+"Es tut uns schrecklich Leid. Können Sie uns helfen, das Problem zu beheben, "
+"indem Sie den Abbruch berichten?"
 
 #: GTG/tools/gtkcrashhandler.py:169
 msgid "An error has occurred"
@@ -112,15 +114,15 @@ msgstr "Offensichtlich ist ein Fehler aufgetreten."
 
 #: GTG/tools/gtkcrashhandler.py:212
 msgid "_Details"
-msgstr ""
+msgstr "_Details"
 
 #: GTG/tools/gtkcrashhandler.py:218
 msgid "_Report this problem..."
-msgstr ""
+msgstr "_Berichten Sie dieses Problem ..."
 
 #: GTG/tools/gtkcrashhandler.py:222
 msgid "_Ignore the error"
-msgstr ""
+msgstr "_Ignorieren Sie den Fehler"
 
 #: GTG/taskeditor/editor.py:321
 #, python-format
@@ -140,19 +142,19 @@ msgstr[1] "%(days)d Tage vorzeitig abgeschlossen"
 #, python-format
 msgid "Due tomorrow!"
 msgid_plural "%(days)d days left"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Morgen fällig!"
+msgstr[1] "%(days)d Tage verbleiben"
 
 #: GTG/taskeditor/editor.py:332
 msgid "Due today!"
-msgstr ""
+msgstr "Heute fällig!"
 
 #: GTG/taskeditor/editor.py:335
 #, python-format
 msgid "Due yesterday!"
 msgid_plural "Was %(days)d days ago"
 msgstr[0] ""
-msgstr[1] ""
+msgstr[1] "War vor %(days)d Tagen fällig"
 
 #: GTG/taskeditor/taskeditor.glade.h:1
 msgid "Closed on"
@@ -265,11 +267,11 @@ msgstr "Schlagwort hinzufügen"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:5
 msgid "Add Tag..."
-msgstr "_Schlagwort hinzufügen…"
+msgstr "_Schlagwort hinzufügen …"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:6
 msgid "Add a Tag..."
-msgstr "Ein Schlagwort hinzufügen…"
+msgstr "Ein Schlagwort hinzufügen …"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:7
 msgid "Add a subtask"
@@ -442,7 +444,7 @@ msgstr "_Schnelleintrag"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:48
 msgid "_Schedule for..."
-msgstr "Ein_planen für"
+msgstr "Ein_planen für …"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:49
 msgid "_Tags Sidebar"
@@ -595,6 +597,19 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link:"
 msgstr ""
+"Willkommen zu Getting Things Gnome!, Ihren neuen Aufgabenmanager.\n"
+"\n"
+"In GTG ist alles eine Aufgabe. Vom Bau einer Brücke über den Pazifischen "
+"Ozean zum Austausch einer Glühbirne oder dem Organisieren einer Party. Wenn "
+"Sie eine Aufgabe bearbeiten, wird sie automatisch gesichert.\n"
+"\n"
+"Wenn eine Aufgabe erledigt ist, können Sie den &quot;Erledigt&quot;Knopf "
+"drücken. Wenn die Aufgabe nicht mehr relevant ist, drücken Sie einfach "
+"&quot;Verwerfen&quot;.\n"
+"\n"
+"Eine Aufgabe kann aus mehreren Teilaufgaben bestehen, die als Link "
+"(Verknüpfung) in der Beschreibung erscheinen. Klicken Sie einfach auf den "
+"nachfolgenden Link."
 
 #: GTG/core/firstrun_tasks.py:17
 msgid ""
@@ -608,6 +623,18 @@ msgid ""
 "need to do the subtask anymore.\n"
 "Other stuff you should read:"
 msgstr ""
+"Nachdem Sie die obige Teilaufgabe gelesen haben, markieren Sie sie als "
+"erledigt. Wenn Sie die Aufgabe nicht erledigen wollen, markieren Sie sie als "
+"Verwerfen. Erledigte und verworfenen Aufgaben werden in dem Fenster der "
+"geschlossenen Aufgaben gehalten, dieses ist per Vorgabe versteckt, aber Sie "
+"können es leicht im Ansichtsmenü aktivieren.\n"
+"\n"
+"Wenn Sie diese Aufgabe schließen, werden automatisch alle Teilaufgaben "
+"ebenfalls geschlossen. Wir haben dies in der Tat berücksichtigt, wenn Sie "
+"eine gegebene Aufgabe erledigt haben, brauchen Sie die Teilaufgabe nicht "
+"mehr zu erledigen.\n"
+"\n"
+"Weiterer Kram, den Sie lesen sollten:"
 
 #: GTG/core/firstrun_tasks.py:26
 msgid ""
@@ -617,6 +644,11 @@ msgid ""
 "\n"
 "Thank you for trying out GTG :-)"
 msgstr ""
+"Wir hoffen, dass Sie GTG schätzen werden. Bitte senden Sie uns "
+"Fehlerberichte und Ideen für einen verbesserten Gebrauch:\n"
+"    https://bugs.launchpad.net/gtg\n"
+"\n"
+"Danke, dass Sie GTG ausprobiert haben. :-)"
 
 #: GTG/core/firstrun_tasks.py:34
 msgid "Learn how to use subtasks"
@@ -638,6 +670,22 @@ msgid ""
 "\n"
 "Also, marking a parent as done will mark all the subtasks as done."
 msgstr ""
+"Wenn Sie in der Aufgabenbeschreibung (dieses Fenster) eine Zeile mit &quot;-"
+"&quot; beginnen, wird sie als &quot;Teilaufgabe&quot; betrachtet, als etwas, "
+"was zur Erledigung Ihrer Aufgabe zu leisten ist. Versuchen Sie &quot;- Test "
+"Teilaufgabe&quot; in die nächste Zeile zu schreiben und drücken Sie die "
+"Enter-Taste.\n"
+"\n"
+"Sie können auch den &quot;Teilaufgabe einfügen&quot;Knopf drücken.\n"
+"\n"
+"Aufgaben und Teilaufgaben können durch Drag-n-Drop (Ziehen und Loslassen) in "
+"der Aufgabenliste umsortiert werden.\n"
+"\n"
+"Einige Strukturen kommen durch das Konzept der Teilaufgaben: Zum Beispiel "
+"kann das Fälligkeitsdatum einer Teilaufgabe nicht später als das "
+"Fälligkeitsdatum der Aufgabe liegen.\n"
+"\n"
+"Genauso beendet das Markieren der Aufgabe alle Teilaufgaben."
 
 #: GTG/core/firstrun_tasks.py:48
 msgid "Learn how to use tags"
@@ -672,6 +720,36 @@ msgid ""
 "subtask). Of course, you can modify at any time the tags of this particular "
 "subtask. It will never be changed by the parent."
 msgstr ""
+"Ein Schlagwort (tag) ist ein einfaches Wort, welches mit &quot;@&quot; "
+"beginnt.\n"
+"\n"
+"Versuchen Sie hier ein Wort beginnend mit einem @ zu schreiben:\n"
+"\n"
+"Es wird gelb, es ist ein Schlagwort.\n"
+"\n"
+"Mit Schlagwörtern sortieren Sie Ihre Aufgaben. Im Ansichtsmenü können Sie "
+"eine Seitenleiste aktivieren, die alle verwendeten Schlagwörter zeigt, "
+"sodass Sie leicht alle Aufgaben, die einem Schlagwort zugeordnet sind, sehen "
+"können. Eine Aufgabe kann unbegrenzt viele Schlagwörter haben.\n"
+"\n"
+"Sie können ein Schlagwort per Drag-n-Drop auf eine andere ziehen, um eine "
+"Teilschlagwort zu erstellen. Wenn Sie zum Beispiel das Schlagwort @zu_zahlen "
+"auf das Schlagwort @Geld ziehen, wird jede Aufgabe, die mit @zu_zahlen "
+"markiert ist, ebenfalls in der Sicht des Schlagwortes @Geld erscheinen. "
+"(Allerdings wird das Schlagwort @Geld nicht der Aufgabe hinzugefügt.)\n"
+"\n"
+"Wenn Sie ein Schlagwort in der Seitenleiste mit der rechten Maustaste "
+"anklicken, können Sie die Farbe verändern. Dies erlaubt Ihnen eine farbigere "
+"Aufgabenliste zu erstellen, wenn Sie dies wollen.\n"
+"\n"
+"Eine neues Schlagwort wird nur der aktuellen Aufgaben zugewiesen. Es gibt "
+"keine Rekursion, das Schlagwort wird also den existierenden Teilaufgaben "
+"nicht zugewiesen. Wenn Sie aber eine neue Teilaufgabe erstellen, erbt diese "
+"Teilaufgabe das Schlagwort seiner Eltern als gute Erstausstattung. (Dies ist "
+"auch der Fall, wenn Sie ein Schlagwort der übergeordneten Aufgabe direkt "
+"nach der Erstellung einer Teilaufgabe zuweisen.) Natürlich können Sie zu "
+"jeder Zeit die Schlagwörter dieser Teilaufgabe verändern. Sie werden nie "
+"mehr von der übergeordneten Aufgabe verändert."
 
 #: GTG/core/firstrun_tasks.py:66
 msgid "Learn how to use the Workview"
@@ -697,10 +775,30 @@ msgid ""
 "if you have a tag like &quot;someday&quot; that you use for tasks you would "
 "like to do but are not particularly urgent."
 msgstr ""
+"Wenn Sie den &quot;Arbeitsansicht&quot; Knopf drücken, werden nur "
+"bearbeitbare Aufgaben angezeigt.\n"
+"\n"
+"Was ist eine bearbeitbare Aufgabe? Es ist eine Aufgabe, die Sie jetzt direkt "
+"ausführen können.\n"
+"\n"
+"Es ist eine Aufgabe, die &quot;startbar&quot; ist, z.B. das Startdatum ist "
+"bereits vorbei.\n"
+"\n"
+"Es ist eine Aufgabe ohne offene Teilaufgaben, z.B. können Sie die Aufgabe "
+"direkt ausführen.\n"
+"\n"
+"Die Arbeitsansicht wird Ihnen also nur Aufgaben zeigen, die Sie unmittelbar "
+"bearbeiten können.\n"
+"\n"
+"Wenn Sie Schlagworte verwenden, können Sie auf ein Schlagwort in der "
+"Seitenleiste klicken und Aufgaben, die diesem Schlagwort zugeordnet sind, in "
+"der Arbeitsansicht verbergen. Das ist sehr sinnvoll, wenn Sie ein Schlagwort "
+"wie &quot;irgendwann&quot; für Aufgaben verwenden, die nicht besonders "
+"dringend sind, aber die Sie erledigen wollen."
 
 #: GTG/core/firstrun_tasks.py:82
 msgid "Learn how to use Plugins"
-msgstr "Die Benutzung von Erweiterungen kennen lernen"
+msgstr "Wie man Erweiterungen verwendet"
 
 #: GTG/core/firstrun_tasks.py:83
 msgid ""
@@ -711,6 +809,15 @@ msgid ""
 "You can find the Plugin Manager by selecting Edit in the Menu Bar, then "
 "clicking Preferences. You will then see a tab labeled Plugins."
 msgstr ""
+"GTG kann seine Kern-Funktionalitäten durch Plugins erweitern.\n"
+"\n"
+"Einige Beispiele für aktuelle Plugins sind die Synchronisation mit Remember "
+"the Milk und Evolution, die Tomboy/Gnote-Integration und geolokalisierte "
+"Aufgaben.\n"
+"\n"
+"Sie finden den Plugin-Manager unter Bearbeiten in der Menüzeile, dann "
+"klicken Sie Einstellungen. Dort finden Sie einen Reiter mit dem Titel "
+"Plugins."
 
 #: GTG/core/firstrun_tasks.py:92
 msgid "Reporting bugs"
@@ -730,10 +837,21 @@ msgid ""
 "If you have some trouble with GTG, we might be able to help you or to solve "
 "your problem really quickly."
 msgstr ""
+"GTG ist noch Software im Alphastadium. Wir mögen sie und benutzen sie "
+"täglich, aber Sie werden einige Fehler entdecken.\n"
+"\n"
+"Bitte berichten Sie sie uns auf unserer Launchpad-Seite:\n"
+"https://bugs.launchpad.net/gtg\n"
+"\n"
+"Wir brauchen Sie, um diese Software besser zu machen. Jeder Beitrag, jede "
+"Idee ist willkommen.\n"
+"\n"
+"Wenn Sie irgendwelchen Ärger mit GTG haben, können wir Ihnen vielleicht "
+"helfen oder Ihr Problem wirklich schnell lösen."
 
 #: GTG/core/firstrun_tasks.py:106
 msgid "Learn how to use the QuickAdd Entry"
-msgstr "Lernen Sie, das QuickAdd-Eingabesystem zu benutzen"
+msgstr "Wie man den Schnelleintrag verwendet"
 
 #: GTG/core/firstrun_tasks.py:107
 msgid ""
@@ -758,6 +876,28 @@ msgid ""
 "title.\n"
 "If a word begins with @, it is interpreted as a tag."
 msgstr ""
+"Der Schnelleintrag ist der schnellste Weg, um eine Aufgabe zu erstellen. Sie "
+"können ihn im Ansichtsmenü an- und ausschalten.\n"
+"Um eine Aufgabe hinzuzufügen, schreiben Sie seinen Titel in das Eintragsfeld "
+"und drücken Enter. Die Aufgabe wird erstellt und im Aufgabenbrowser "
+"selektiert. Wenn ein Schlagwort im Schlagwortfenster gewählt war, wird es "
+"der neuen Aufgabe zugewiesen.\n"
+"\n"
+"Sie können aber auch Aufgaben mit Attributen wie Schlagworten, "
+"Fälligkeitsdatum oder Startdatum anlegen.\n"
+"Hierfür lautet die Syntax:\n"
+"\n"
+"tags:Schlagwort1,Schlagwort2,Schlagwort3 : Auf diese Weise können Sie "
+"beliebig viele Schlagworte durch Komma getrennt anwenden.\n"
+"\n"
+"due:Datum oder defer:Datum : Auf diese Weise können Sie ein Fälligkeits- "
+"oder Startdatum setzen. Das Datum kann die Formate yyyy-mm-dd (z.B. 2009-04-"
+"01), yyyymmdd (20090401), mmdd (0401, in diesem Fall wird das laufende Jahr "
+"implizit gesetzt), today (für heute), tomorrow (für morgen) oder einen "
+"Englischen Wochentag (due:monday bedeutet fällig am nächsten Montag) haben.\n"
+"\n"
+"Attribute, die auf obige Weise hinzugefügt werden, scheinen nicht im Titel.\n"
+"Wenn ein Wort mit einem @ beginnt, wird es als Schlagwort interpretiert."
 
 #: GTG/core/plugins/__init__.py:32
 msgid "Everything necessary to run this plugin is available."
@@ -1063,7 +1203,7 @@ msgstr "Aufgaben-Liste herunterladen …"
 
 #: GTG/plugins/rtm_sync/syncEngine.py:84
 msgid "Downloading..."
-msgstr "Herunterladen..."
+msgstr "Herunterladen …"
 
 #: GTG/plugins/rtm_sync/syncEngine.py:119
 msgid "Adding tasks to rtm.."
@@ -1083,7 +1223,7 @@ msgstr "Aufgaben von gtg löschen …"
 
 #: GTG/plugins/rtm_sync/syncEngine.py:160
 msgid "Updating changed tasks.."
-msgstr "Aktualisiere geänderte Aufgaben..."
+msgstr "Aktualisiere geänderte Aufgaben …"
 
 #: GTG/plugins/rtm_sync/syncEngine.py:185
 #: GTG/plugins/rtm_sync/syncEngine.py:190
@@ -1181,13 +1321,6 @@ msgstr "In einer Sekunde schließen"
 #~ "Getting Things Gnome! befindet sich noch in einer frühen Alpha-Phase. Wir "
 #~ "mögen es und verwenden es jeden Tag - dennoch werden vielleicht einige "
 #~ "Fehler auftreten."
-
-#~ msgid ""
-#~ "If you have some trouble with GTG, we might be able to help you or to solve "
-#~ "your problem really quickly."
-#~ msgstr ""
-#~ "Sollten Sie Schwierigkeiten mit Getting Things Gnome! haben, können wir "
-#~ "Ihnen vielleicht helfen oder das Problem beheben."
 
 #~ msgid "Authors:  "
 #~ msgstr "Autoren:  "
