--- a/po/gl.po
+++ b/po/gl.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-10-13 10:54+0000\n"
-"Last-Translator: Jorge Álvarez Vilariño <Unknown>\n"
+"PO-Revision-Date: 2010-11-25 09:31+0000\n"
+"Last-Translator: Dario <dario.villar.v@gmail.com>\n"
 "Language-Team: Galego <g11n@mancomun.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-10-14 04:46+0000\n"
+"X-Launchpad-Export-Date: 2010-11-26 04:56+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "Language: gl\n"
 
@@ -99,7 +99,7 @@ msgid ""
 "We're terribly sorry. Could you help us fix the problem by reporting the "
 "crash?"
 msgstr ""
-"Sentimolo. Podería axudarnos a arranxar o problema informando do fallo?"
+"Sentímolo. Podería axudarnos a arranxar o problema informando do fallo?"
 
 #: GTG/tools/gtkcrashhandler.py:169
 msgid "An error has occurred"
@@ -418,7 +418,7 @@ msgstr "Cores de fo_ndo"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:43
 msgid "_Closed Tasks Pane"
-msgstr "Pe_char panel de tarefas"
+msgstr "Panel de tarefas _pechadas"
 
 #: GTG/taskbrowser/taskbrowser.glade.h:44
 msgid "_Edit"
