--- a/po/nl.po
+++ b/po/nl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: gtg\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-03-27 15:20+0100\n"
-"PO-Revision-Date: 2010-06-23 10:12+0000\n"
-"Last-Translator: puccha <Unknown>\n"
+"PO-Revision-Date: 2010-12-04 10:18+0000\n"
+"Last-Translator: Redmar <redmar@ubuntu-nl.org>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Launchpad-Export-Date: 2010-06-24 03:47+0000\n"
+"X-Launchpad-Export-Date: 2010-12-05 04:54+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: GTG/tools/dates.py:51
@@ -594,6 +594,15 @@ msgid ""
 "A task might be composed of multiple subtasks that appear as links in the "
 "description. Simply click on the following link:"
 msgstr ""
+"Welkom in Getting Things Gnome!, uw nieuwe taakbeheerder.\n"
+"\n"
+"In GTG is alles een taak; het bouwen van een brug over de oceaan, het "
+"verwisselen van een lampje tot het organiseren van een feestje. Als u een "
+"taak maakt of wijzigt word het automatisch opgeslagen.\n"
+"\n"
+"Wanneer een taak afgerond is kunt u op de knop &quot;Markeren als "
+"uitgevoerd&quot; klikken. Als de taak niet langer relevant is klikt u op "
+"&quot;Vervallen&quot;"
 
 #: GTG/core/firstrun_tasks.py:17
 msgid ""
@@ -737,7 +746,7 @@ msgstr ""
 
 #: GTG/core/firstrun_tasks.py:106
 msgid "Learn how to use the QuickAdd Entry"
-msgstr ""
+msgstr "Leer hoe u de QuickAdd optie kunt gebruiken"
 
 #: GTG/core/firstrun_tasks.py:107
 msgid ""
